--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ The goal of SF6Dvalues is to provide calculators and tools for SF-6D value sets.
 
 ## Installation
 
-This is an early development version of `SF6Dvalues` and is not yet fully functional. You can install the most recent version from [GitHub](https://github.com/) with:
+You can install the most recent version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -31,4 +31,56 @@ devtools::install_github("uo-cmor/SF6Dvalues")
 
 ## Example
 
-This section will provide some basic examples of the use of the package.
+### S3 vector classes
+
+The `SF12` and `SF6D` classes provide S3 vectors to store SF-12 responses and SF-6D profiles, respectively.
+
+`SF12` vectors are created with `SF12()`:
+
+```{r SF12}
+library(SF6Dvalues)
+SF12(Q1 = 3:5, Q2 = 1:3, Q3 = 1:3, Q4 = 1:3, Q5 = 1:3, Q6 = 1:3,
+     Q7 = 1:3, Q8 = 1:3, Q9 = 1:3, Q10 = 1:3, Q11 = 1:3, Q12 = 1:3)
+```
+
+SF-12 questions can be labelled either Q1, Q2, ..., Q12 as above, or Q1, Q2a, Q2b, ..., Q7:
+
+```{r SF12-alt}
+SF12(Q1 = 3:5, Q2a = 1:3, Q2b = 1:3, Q3a = 1:3, Q3b = 1:3, Q4a = 1:3,
+     Q4b = 1:3, Q5 = 1:3, Q6a = 1:3, Q6b = 1:3, Q6c = 1:3, Q7 = 1:3)
+```
+
+`SF6D` vectors can be constructed from SF-6D dimension levels with `SF6D()`:
+
+```{r SF6D}
+SF6D(PF = 1:3, RL = 1:3, SF = 1:3, PAIN = 1:3, MH = 1:3, VIT = 1:3)
+```
+
+Or from an `SF12` vector with `as_SF6D()`:
+
+```{r as_SF6D}
+sf12 <- SF12(Q1 = 3:5, Q2 = 1:3, Q3 = 1:3, Q4 = 1:3, Q5 = 1:3, Q6 = 1:3,
+             Q7 = 1:3, Q8 = 1:3, Q9 = 1:3, Q10 = 1:3, Q11 = 1:3, Q12 = 1:3)
+as_SF6D(sf12)
+```
+
+Or directly from SF-12 responses with `sf6d_profile()`:
+
+```{r sf6d_profile}
+sf6d_profile(Q1 = 3:5, Q2 = 1:3, Q3 = 1:3, Q4 = 1:3, Q5 = 1:3, Q6 = 1:3,
+             Q7 = 1:3, Q8 = 1:3, Q9 = 1:3, Q10 = 1:3, Q11 = 1:3, Q12 = 1:3)
+```
+
+### SF-6D utility values
+
+Utility values can be calculated either from an `SF6D` vector or directly from SF-12 responses. At this stage, only the original Brazier & Roberts UK population value set is available.
+
+```{r utility}
+sf6d <- SF6D(PF = 1:3, RL = 1:3, SF = 1:3, PAIN = 1:3, MH = 1:3, VIT = 1:3)
+utility(sf6d)
+```
+
+```{r sf6d_utility}
+sf6d_utility(Q1 = 3:5, Q2 = 1:3, Q3 = 1:3, Q4 = 1:3, Q5 = 1:3, Q6 = 1:3,
+             Q7 = 1:3, Q8 = 1:3, Q9 = 1:3, Q10 = 1:3, Q11 = 1:3, Q12 = 1:3)
+```
