--- a/README.Rmd
+++ b/README.Rmd
@@ -84,3 +84,23 @@ utility(sf6d)
 sf6d_utility(Q1 = 3:5, Q2 = 1:3, Q3 = 1:3, Q4 = 1:3, Q5 = 1:3, Q6 = 1:3,
              Q7 = 1:3, Q8 = 1:3, Q9 = 1:3, Q10 = 1:3, Q11 = 1:3, Q12 = 1:3)
 ```
+
+### SF-12 Component Summary scores
+
+The SF-12 PCS and MCS scores can be calculated from an `SF12` vector with `PCS()` and `MCS()`:
+
+```{r CS-scores}
+sf12 <- SF12(Q1 = 3:5, Q2 = 1:3, Q3 = 1:3, Q4 = 1:3, Q5 = 1:3, Q6 = 1:3,
+             Q7 = 1:3, Q8 = 1:3, Q9 = 1:3, Q10 = 1:3, Q11 = 1:3, Q12 = 1:3)
+PCS(sf12)
+MCS(sf12)
+```
+
+Or directly from SF-12 responses with `sf12_PCS()` and `sf12_MCS()`:
+
+```{r CS-scores-alt}
+sf12_PCS(Q1 = 3:5, Q2 = 1:3, Q3 = 1:3, Q4 = 1:3, Q5 = 1:3, Q6 = 1:3,
+         Q7 = 1:3, Q8 = 1:3, Q9 = 1:3, Q10 = 1:3, Q11 = 1:3, Q12 = 1:3)
+sf12_MCS(Q1 = 3:5, Q2 = 1:3, Q3 = 1:3, Q4 = 1:3, Q5 = 1:3, Q6 = 1:3,
+         Q7 = 1:3, Q8 = 1:3, Q9 = 1:3, Q10 = 1:3, Q11 = 1:3, Q12 = 1:3)
+```
